add feature admin, manage class
